--- a/index.html
+++ b/index.html
@@ -4107,6 +4107,11 @@
               <td>Individual</td>
               <td>DevOps; SRE; Cloud Architect; Open-source community efforts</td>
             </tr>
+	    <tr>
+              <td><a href="https://github.com/rdecatri">Shyamal Kirpan</a></td>
+              <td>Individual</td>
+              <td>DevOps; SRE; Cloud Architect; Open-source community efforts</td>
+            </tr>
           </tbody>
         </table>
       </div>
